--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #服务端口
 server.port=8889
 
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://10.10.175.136:3306/test_mb4
+spring.datasource.username=qianjin20160304
+spring.datasource.password=qianjin20160304
 
 #日志的最低输出级别
 logging.level.root=info
@@ -24,9 +24,14 @@ mjpegServerFramerate=60
 #性能测试结果目录
 uploadAndroidResultPath=Upload/androidResult/
 iosIfusePath=Upload/IosResult/
-uploadIosResultPath=Library/Caches/AQJPerformanceData/
+uploadIosResultPath=Library/Caches/AQJPerformanceData
 
 web.upload-img-path=Upload/imgs/
 web.upload-video-path=Upload/videos/
 web.upload-apk-path=Upload/apks/
 web.upload-ipa-path=Upload/ipa/
+
+#报警
+lego.alert.appId=app-performanceTest
+lego.alert.env=TEST
+lego.alert.receivers=zhangzhiming@iqianjin.com
