--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #服务端口
 server.port=8889
 
-spring.datasource.url=jdbc:mysql://10.10.175.136:3306/test_mb4
-spring.datasource.username=qianjin20160304
-spring.datasource.password=qianjin20160304
+spring.datasource.url=jdbc:mysql://10.10.:3306/test
+spring.datasource.username=
+spring.datasource.password=
 
 #日志的最低输出级别
 logging.level.root=info
